# odh-ci-example

./: README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: run-backend-tests.yaml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 581e8ae121ad_topic_search_index.py  79c024641334_message_on_cascade_delete.py  c411223c3deb_message_and_topic_models.py
backend/config/: database.py  environment.py
backend/dependencies/: deps.py
backend/frontend/: package.json
backend/model/: MessageModel.py  TopicModel.py  __init__.py
backend/repository/: ORMMessageRepository.py  ORMTopicRepository.py
backend/routers/: main_router.py  topic_router.py
backend/schema/: MessagePostSchema.py  MessageSchema.py  PageSchema.py  TopicPostSchema.py  TopicSchema.py
backend/service/: Errors.py  MessageService.py  Page.py  TopicService.py
backend/test/: conftest.py  test_message_repository.py  test_message_service.py  test_migrations.py  test_topic_repository.py  test_topic_service.py  test_topics_integration.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/: app.css  app.html
frontend/src/api/: types.ts
frontend/src/components/: InputWithButton.svelte  MessageComponent.svelte
frontend/src/routes/: +page.svelte  +page.ts
frontend/src/routes/topics/[id]/: +page.svelte  +page.ts
