[project]
name = "ci-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "sqlalchemy>=2.0.40",
    "testcontainers>=4.10.0",
]
